# nextrs

./: .dockerignore  .gitattributes  .gitignore  .vercelignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  ISSUES.md  MANIFEST.md  PUBLISHING.md  README.md  ROADMAP.md  askama.toml  build.rs  package-lock.json  package.json  rust-toolchain.toml  vercel.json
.cargo/: config.toml
.claude/skills/daisy-ui/: SKILL.md  build.md  colors.md  config.md  setup.md  usage-rules.md
.claude/skills/daisy-ui/components/: actions.md  data-display.md  feedback.md  forms.md  layout.md  mockups.md  navigation.md
.github/workflows/: ci.yml  coldstart-pinger.yml
api/: index.rs  landing.rs  page.rs  readyz.rs
benchmarks/: README.md  methodology.md
benchmarks/apps/nextjs/: .gitignore  next.config.ts  package-lock.json  package.json  vercel.json
benchmarks/apps/nextjs/app/: globals.css  layout.tsx  page.tsx  providers.tsx  shell.tsx  todos-client.tsx
benchmarks/apps/nextjs/app/api/health/: route.ts
benchmarks/apps/nextjs/app/api/todos/: route.ts
benchmarks/apps/nextjs/lib/: queries.ts  store.ts
benchmarks/results/: hhh-devloop.md  results.md
benchmarks/scripts/: bench-cold-freq.sh  bench-cold.sh  bench-hhh-local.sh  bench-local.sh  bench-size.sh
cargo-nextrs-dev/: Cargo.toml
cargo-nextrs-dev/src/: main.rs
crates/cargo-nextrs-dev/src/: main.rs
crates/create-nextrs-app/: Cargo.toml
crates/create-nextrs-app/src/: main.rs
crates/nextrs/: Cargo.toml
crates/nextrs-macros/: Cargo.toml  README.md
crates/nextrs-macros/src/: lib.rs
crates/nextrs/src/: build.rs  bundle.rs  conventions.rs  discovery.rs  health.rs  lib.rs  openapi.rs  params.rs  prefetch.rs  router.rs  seed.rs  speculation.rs  telemetry.rs  vercel.rs  wait_until.rs
crates/nextrs/tests/: bundle_guard.rs
crates/nextrs/tests/fixtures/unresolved-bare/app/: page.tsx
create-nextrs-app/: Cargo.toml
create-nextrs-app/src/: main.rs
dev/: main.rs
docs/: building-on-vercel.md  coldstart-arrival-shapes.md  deployments.md  hhh-migration-plan.md  hhh-migration-survey.md  hhh-migration-timelog.md  latency.md  local-dev-workflow.md  middleware-before-loading.md  migrating-nextjs-to-nextrs.md  react-tsx-support.md  server-props.md  streaming.md  typesafe-client-codegen.md  vercel-deploy.md
docs/design/: gateway-and-unmatched-routes.md
docs/postmortems/: 2026-07-11-docs-site-dead-landing.md
docs/upstream-plans/: README.md  alias-resolution-browser-bundles.md  api-macro-params-inference.md  build-times-and-deploy-reliability.md  cargo-dev-double-compile.md  dev-runner-child-cleanup.md  dev-static-asset-caching.md  emit-seeds-path-params.md  fallible-handler-seeding.md  generated-client-barrel-exports.md  hover-preload-route.md  porting-paved-road.md  react-module-failure-fallback.md  rolldown-newer-stable-rustc.md  route-params-for-tsx-pages.md  route-telemetry.md  soft-nav-prefetch.md  speculation-config-rename.md  stale-committed-dist-build-skew.md  state-extractor-seeding.md  static-js-caching.md  tsx-initial-head-and-styles.md  url-bound-query-hooks.md  vercel-wait-until.md  write-if-changed-generated-assets.md
e2e/: app-server.mjs  apps.json  check-route.mjs  hover.mjs  package-lock.json  package.json  prod-smoke.mjs  smoke.mjs
example/: Cargo.toml  askama.toml  build.rs
example/app/: layout.html  page.rs
example/app/simple/: page.rs
example/app/with-layout/: layout.rs  loading.html  page.rs
example/app/with-loading/: loading.rs  page.html  page.rs
example/src/: main.rs
examples/react-todos/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  vercel.json
examples/react-todos/.cargo/: config.toml
examples/react-todos/api/: index.rs
examples/react-todos/app/: layout.html  layout.rs  layout.tsx  page.tsx  prefetch.rs  props.rs
examples/react-todos/app/about/: page.tsx
examples/react-todos/app/api/todos/: route.rs
examples/react-todos/app/api/todos/[id]/: route.rs
examples/react-todos/app/todos/[id]/: page.tsx  prefetch.rs
examples/react-todos/client/: openapi.json  orval.config.ts  package-lock.json  package.json  tsconfig.json
examples/react-todos/client/scripts/: gen-barrel.mjs
examples/react-todos/client/src/: index.ts
examples/react-todos/public/: style.css
examples/react-todos/src/: lib.rs  main.rs
examples/react-todos/src/core/: todos.rs
metrics/: fleet.json  ping.mjs  summarize.mjs
nextrs/: Cargo.toml  README.md
nextrs-build/: Cargo.toml
nextrs-build/src/: lib.rs
nextrs-macros/: Cargo.toml  README.md
nextrs-macros/src/: lib.rs
nextrs/src/: build.rs  bundle.rs  conventions.rs  discovery.rs  docs.rs  lib.rs  openapi.rs  router.rs  seed.rs  vercel.rs
public/: style.css
scripts/: deploy-prebuilt.sh
site/: .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs  rust-toolchain.toml  vercel.json
site/.cargo/: config.toml
site/api/: index.rs
site/app/: layout.html  layout.rs  page.html  page.tsx
site/app/api/coldstarts/: route.rs
site/app/api/ping/: route.rs
site/app/docs/: layout.html  layout.rs  page.html  page.rs
site/app/docs/[slug]/: middleware.rs  page.rs
site/app/llms-full.txt/: route.rs
site/app/llms.txt/: route.rs
site/app/simple/: page.html
site/app/with-layout/: layout.html  loading.html  loading.rs  page.html
site/app/with-loading/: loading.html  page.html
site/client/: README.md  openapi.json  orval.config.ts  package-lock.json  package.json  tsconfig.json
site/client/src/: NextrsMark.tsx  index.ts  nextrs-client.ts
site/content/docs/: case-study-hhh.md  case-study-port-at-scale.md  conventions.md  deploy-docker.md  deploy-prebuilt.md  deploy-vercel.md  getting-started.md  performance.md  porting.md  react-server-props.md  streaming.md  telemetry.md  typesafe-client.md
site/public/: style.css
site/public/case-studies/: port-at-scale.html
site/scripts/: gen-mark.py
site/src/: main.rs
site/style/: build.sh  check.sh  input.css
style/: build.sh  input.css
templates/: layout.html  page.html
templates/landing/: layout.html  loading.html  page.html
xtask/src/: main.rs
(+3 files in other folders)
