[workspace]
resolver = "3"
members = [
    "crates/nextrs",
    "crates/nextrs-macros",
    "crates/cargo-nextrs-dev",
    "crates/create-nextrs-app",
    "site",
    "examples/react-todos",
]

# examples/react-todos depends on the *published* nextrs (so it builds and
# deploys standalone from its own dir). Inside this workspace, redirect that to
# the local source so framework changes are picked up without a release.
[patch.crates-io]
nextrs = { path = "crates/nextrs" }
nextrs-macros = { path = "crates/nextrs-macros" }

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
