[workspace]
resolver = "3"
members = [
    "crates/nextrs",
    "crates/nextrs-macros",
    "crates/cargo-nextrs-dev",
    "crates/create-nextrs-app",
    "site",
    "examples/react-todos",
]

# examples/react-todos depends on the *published* nextrs (so it builds and
# deploys standalone from its own dir). Inside this workspace, redirect that to
# the local source so framework changes are picked up without a release.
[patch.crates-io]
nextrs = { path = "crates/nextrs" }
nextrs-macros = { path = "crates/nextrs-macros" }

[profile.dev]
debug = 0

# Default release: cargo's stock settings (parallel codegen, no LTO). The old
# fat-LTO/single-CGU release added ~2.5min to every Vercel deploy on a 2-core
# builder for zero benefit to a docs site. Benchmarks that want max-opt use
# --profile perf explicitly (benchmarks/results.md pre-2026-07-12 was measured
# under the old fat-LTO release).
[profile.release]

[profile.perf]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
