[package]
name = "nextrs-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
nextrs = { path = "../nextrs" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-livereload = "0.9"
askama = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
http = "1"
