[package]
name = "nextrs"
version = "0.2.0"
description = "A Next.js-style routing framework for Rust built on Axum and Askama."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/drewhirschi/nextrs"
homepage = "https://github.com/drewhirschi/nextrs"
documentation = "https://docs.rs/nextrs"
readme = "README.md"

[features]
default = []
# Enables the `nextrs::vercel` module: a Tower layer that adapts the framework's
# axum router for `vercel_runtime::run` while preserving HTML streaming. (The
# default `vercel_runtime::axum::VercelLayer` only streams text/event-stream
# and application/json — see nextrs/src/vercel.rs for the workaround.)
vercel = [
    "dep:vercel_runtime",
    "dep:http-body-util",
    "dep:hyper",
    "dep:tower",
]
# Enables the `nextrs::build` and `nextrs::docs` modules: codegen invoked from
# a consumer crate's `build.rs` to emit a `generated_registry()` function from
# a scan of `app/`, and pre-rendered docs content + llms.txt from a scan of a
# markdown content dir. Only depend on this in `[build-dependencies]`, not in
# `[dependencies]` — it pulls in std::fs APIs and the markdown renderer, which
# don't belong in the runtime tree.
build = ["dep:pulldown-cmark", "dep:toml"]
# Enables `nextrs::bundle`: build-time bundling of page.tsx entries via
# rolldown (all-Rust, the Vite 8 engine). Heavy dependency tree — only enable
# in [build-dependencies] of apps that actually use .tsx pages.
tsx = ["build", "dep:rolldown"]

[dependencies]
nextrs-macros = { path = "../nextrs-macros", version = "0.1.0" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
askama = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
http = "1"
async-stream = "0.3.6"
bytes = "1.11.1"
futures-core = "0.3.32"

# Optional — only pulled in when the `build` feature is on (build scripts).
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"], optional = true }
toml = { version = "0.8", optional = true }

# Optional — only pulled in when the `tsx` feature is on (build scripts).
# Pinned exactly: the crates.io releases are new (May 2026) and the Rust API
# has no semver promise yet. Bump deliberately.
rolldown = { version = "=1.1.0", optional = true }

# Optional — only pulled in when the `vercel` feature is on.
vercel_runtime = { version = "2", features = ["axum"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", optional = true }
tower = { version = "0.5", optional = true }
utoipa = { version = "5.5.0", features = ["axum_extras"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
