[package]
name = "site"
# src/bin/dump-openapi.rs makes `cargo run -p site` ambiguous without this
# (and the dev watcher's default command relies on it).
default-run = "site"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[build-dependencies]
nextrs = { path = "../nextrs", features = ["build"] }

[dependencies]
nextrs = { path = "../nextrs" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-livereload = "0.9"
askama = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
http = "1"
serde = { version = "1", features = ["derive"] }
# `route.rs` handlers use `#[utoipa::path]` + `ToSchema`; the generated
# `generated_openapi()` uses utoipa's `#[derive(OpenApi)]`, so utoipa must be a
# direct dependency of every crate that compiles the generated registry.
utoipa = "5"
