[package]
name = "nextrs-macros"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Proc-macros for nextrs (the #[nextrs::api] attribute)."
repository = "https://github.com/drewhirschi/nextrs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
# The attribute itself only formats tokens, but the seed companion (a typed
# server-side prefetch fn emitted next to eligible GET handlers) needs the
# handler's parsed signature.
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
